fixed message overflow, & better styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,14 +72,13 @@ body {
 .chat-window {
   width: 35rem;
   height: 35rem;
-  
 }
 
 .chat-window p {
   margin: 0;
 }
 .chat-window .chat-head {
-  height: 3.3rem;
+  height: 3.6rem;
   border-radius: .5rem .5rem 0rem 0rem;
   outline: .3rem solid #2e7d32;
   background: #2e7d32;
@@ -88,19 +87,30 @@ body {
 }
 .chat-window .chat-head p {
   display: flex;
-  font-family: sans-serif;;
-  justify-content: center;
-  background-color: #266829;
+  font-family: sans-serif;
   font-size: 1.2rem;
-  padding:.6rem;
+  padding:.8rem 1.5rem 0 1rem;
   color: rgb(255, 255, 255);
   font-weight: 700;
   
 }
+.room-tag{
+  display: flex;
+  width: 100%;
+  height: 3rem;
+  border-radius: 1rem;
+  background-color: #266829;
+}
+.room-tag p{
+  box-shadow: inset 1rem .5rem .5rem rgba(0, 0, 0, 0.273);
+  border-radius: 1rem 0 0 1rem;
+  background-color: #1b4b1e;
+}
 
 .chat-window .chat-mid {
+  box-shadow: inset 1rem .2rem 1rem rgba(0, 0, 0, 0.273);
   height: 90%;
-  border-radius: .5rem;
+  border-radius: .3rem;
   outline: .25rem solid #2e7d32;
   background: #fff;
   position: relative;
@@ -108,10 +118,23 @@ body {
 .chat-window .chat-mid .message-container {
   width: 100%;
   height: 100%;
+  
+}
+.chat-mid{
   overflow-y: scroll;
   overflow-x: hidden;
 }
-
+.chat-mid::-webkit-scrollbar-thumb {
+  background-color: #c4c2c29c;
+  -webkit-box-shadow: inset -4px -4px 4px rgba(0, 0, 0, 0.273);
+  border-radius: 1rem;
+}
+.chat-mid::-webkit-scrollbar{
+  width: .8rem;
+	-webkit-box-shadow: inset -2px -2px 10px rgba(0,0,0,0.3);
+	border-radius: 1rem;
+	background-color: #f7f3f31f;
+}
 .chat-window .chat-mid .message-container::-webkit-scrollbar {
   display: none;
 }
@@ -124,7 +147,7 @@ body {
 .chat-window .chat-mid .message .message-content {
   width: auto;
   height: auto;
-  min-height: 3.5rem;
+  min-height: 2.5rem;
   max-width: 20rem;
   background-color: #43a047;
   border-radius: .3rem;
